07_Week_07/JavaSpringBoot-H2-MovieMgr/src/main/java/com/samples/moviemgr/error/InvalidMovieRatingException.java
package com.samples.moviemgr.error;

public class InvalidMovieRatingException extends RuntimeException{

	private float rating;
	
	public InvalidMovieRatingException(String message, float rating) {
		
		super(message);
		this.rating = rating;
	}
	
	public float getRating() {
		return rating;
	}
}
